# PC-Monitor

./: .gitignore  ANLEITUNG_TRAY_APP.md  AUTOSTART_ANLEITUNG.md  BUGFIXES.md  BUILD_GUIDE.md  BUILD_SUCCESS.md  CHANGELOG_LVGL.md  CMakeLists.txt  FILES_OVERVIEW.md  LICENSE  PC Monitor Manager.spec  PC Monitor Tray.spec  PROJECT_STRUCTURE.md  QUICKREF.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_LVGL.md  README_TRAY_APP.md  REFACTORING_SUMMARY.md  SCHNELLSTART.md  SUMMARY.md  TEMPERATURE_FIX.md  TEST_ANLEITUNG.md  TEST_GUIDE.md  THIRD-PARTY-NOTICES.txt  WIRING.md  build_exe.bat  create_icon.py  lv_conf.h  partitions.csv  pc_monitor_tray.py  requirements.txt  requirements_tray.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  start_pc_monitor.bat  start_pc_monitor.ps1
.claude/: settings.local.json
PCMonitorClient/: PCMonitorClient.sln  create_release_package.ps1
PCMonitorClient/PCMonitorClient/: ChunkedSerialUploader.cs  FirmwareUploader.cs  HardwareCollector.cs  ImageConverter.cs  ImageUploader.cs  PCMonitorClient.csproj  Program.cs  SettingsForm.cs  StatusForm.cs  SystemStats.cs  app.manifest  install_autostart.ps1
docs/: HARDWARE.md  SOFTWARE.md
main/: .gitignore  CHANGELOG_ARC_DESIGN.md  CMakeLists.txt  Kconfig.projbuild  bitmap_fonts.c  bitmap_fonts.h  file_list_gen.cmake  gc9a01.c  gc9a01.h  graphics.c  graphics.h  gui_settings.c  gui_settings.h  idf_component.yml  lvgl_gc9a01_driver.c  lvgl_gc9a01_driver.h  main.c  main_lvgl.c  main_lvgl_example.c  main_lvgl_test.c  pc_monitor.c  pc_monitor.h  pc_monitor_gen.c  pc_monitor_gen.h  screen_cpu.c  screen_gpu.c  screen_network.c  screen_ram.c  screens.h  screensaver_images.c  screensaver_images.h  test_xml_preview.c
main/core/: system_types.h
main/drivers/: fw_update.c  fw_update.h  usb_serial_comm.c  usb_serial_comm.h
main/images/: CPU.c  DK_Fass.c  GPU.c  NET.c  PacMan.c  RAM.c  Sonic_Ring.c  triforce.c
main/screens/: lvgl_xml_screens.c  lvgl_xml_screens.h  screen_cpu.xml  screen_cpu_gen.c  screen_cpu_gen.h  screen_cpu_lvgl.c  screen_gpu.xml  screen_gpu_gen.c  screen_gpu_gen.h  screen_gpu_lvgl.c  screen_network.xml  screen_network_gen.c  screen_network_gen.h  screen_network_lvgl.c  screen_ram.xml  screen_ram_gen.c  screen_ram_gen.h  screen_ram_lvgl.c  screens_lvgl.h
main/storage/: hw_identity.c  hw_identity.h  storage_mgr.c  storage_mgr.h
main/ui/: screensaver_mgr.c  screensaver_mgr.h  ui_manager.c  ui_manager.h
python/: __init__.py  pc_monitor.py  pc_monitor_bidirectional.py  pc_monitor_bidirectional_working but with glitch.pyw  pc_monitor_broken.py  requirements.txt
screen_mockups/: README.md  all-in-one.html  cpu-gauge.html  cyberpunk-style-CPU.html  cyberpunk-style.html  gpu-gauge.html  index.html  minimal-style.html  multi-display-overview.html  ram-bars.html  storage-multi.html  system-info.html
