    idf_component_register(
        SRCS
            "main_lvgl.c"
            "lvgl_gc9a01_driver.c"
            "screens/screen_cpu_lvgl.c"
            "screens/screen_gpu_lvgl.c"
            "screens/screen_ram_lvgl.c"
            "screens/screen_network_lvgl.c"
            "images/DK_Fass.c"
            "images/PacMan.c"
            "images/Sonic_Ring.c"
            "images/triforce.c"
        INCLUDE_DIRS
            "."
            "screens"
        REQUIRES
            lvgl
            esp_lcd
            driver
    )
   